--- a/Q2Guide.adoc
+++ b/Q2Guide.adoc
@@ -1,157 +1,106 @@
 include::header.adoc[]
 
-:title: Jam 2: Study Guide
+:title: Quiz 2: Study Guide
 :Author Initials: ASN
-:Date:    2020-08-15
+:Date:    2021-08-26
 :Revision: 0.1
+:stem: latexmath
 
 = {title}
 
-Jams are open book. 40 minutes in lab.
+Quizzes are open book. 30 minutes at the start of class
 
 Topics:
 
-This quiz includes the previous topics from Jam 1 plus
+* Interpolation
+* Splines
 
-* Conditional statements: `if`/`else`
-* Logical and relational operators: `&&`, `||`, `!`, `<=`, `>=`, `>`, `<` , `==`
-* Arithmetic operators: `+`, `-`, `*`, `/`, `++`, `--`, `+=` , `-=`, `*=`, `/=`
-* String comparisons, the empty string: `""`
-* loops: for- and while-
-* Accumulator variable pattern
-
-Write Java programs to check your answers. Or you can ask a TA or instructor 
-to give feedback on your responses.
+Unless explicitly asked to compute a final answer, it is sufficient to write out the formula and plug-in values. 
 
 = Practice questions
 
-1) Given the following variables, what is the **value** and **type** for each of the following expressions? 
+1) What is a spline?
 
-[source,java]
+2) What is interpolation?
+
+3) How does interpolation relate to splines?
+
+4) What is keyframing? Describe an example.
+
+5) How do splines relate to keyframing?
+
+6) What does it mean for a spline to have C^1^ continuity?
+
+7) What does it mean for a parametric curve to have affine invariance? linear precision?
+
+8) What is the difference between extrapolation and interpolation?
+
+9) Suppose we wish to interpolate between two colors: red and green. Write psuedocode to linearly interpolate between red and green in 10 steps.
+
+10) In the following questions, assume we have the following control points which we wish to use for cubic interpolation
+
+[source]
 ----
-int x = 5;
-int y = 13;
-String message = "cat!";
-boolean Done = false;
-----
-
-** `x < 10 && y < 10`
-** `x < 10 || y < 10`
-** `x < 10 && x > 0`
-** `x > 10 || x < 0`
-** `(5/x) > 7.0`
-** `message.compareTo("cats") == 0`
-** `!Done`
-** `Done || (x < 6 && y > 10)`
-
-2) Consider the following code 
-
-[source,java]
-----
-String colorName = "purple";
-
-if (colorName.compareTo("red") != 0) {
-  System.out.println(colorName + " is not primary");
-}
-else if (colorName.compareTo("blue") != 0 {
-  System.out.println(colorName + " is not primary");
-}
-else if (colorName.compareTo("yellow") != 0) {
-  System.out.println(colorName + " is not primary");
-}
-else {
-  System.out.println(colorName + " is primary");
-}
+B0 = (80, 330)
+B1 = (70, 180)
+B2 = (260, 80)
+B3 = (450, 210)
 ----
 
-* Draw a decision diagram corresponding to this if statement.
-* What does the above code print when 
-** `colorName = "purple"`? 
-** `colorName = "red"`?
-** `colorName = "yellow"`? 
+* Draw the control points.
+* Using de Casteljau's algorithm, show that the value of the curve at time t = 1 is b3.
+* Recall that the formula for a n^th^ Bezier curve is 
 
-3) Write a program that inputs a month as an integer and returns a string name for that month. For example, 
-if we call the function with the number 1, the program should print "January". 
+[stem]
+++++
+p(t) = \sum_{i=0}^n B_i^n(t) p_i
+++++
 
-[source,subs=quotes]
+where
+
+[stem]
+++++
+B_i^n(t) = \frac{n!}{i! (n-i)!} t^i (1 - t)^{n-i}
+++++
+
+What is the polynomial for the cubic Bezier curve?
+* Compute the value at t=1 using the Bernstein form of the cubic interpolation (plug-in the values, you do not need to solve)
+* Write pseudocode for drawing the Bezier curve. 
+* Write pseudocode for moving the curve so that the first point starts at (0,0)
+
+11) Suppose we use a quadratic polynomial (degree 2) instead of a cubic (degree 3)? What is the Bernstein polynomial for this function to interpolate two points b0 and b3? How would de Casteljau's algorithm change? Show that the sum of Bernstein basis functions for a degree-2 sum to one. 
+
+12) What are some advantages and disadvantages of de Casteljau's algorithm versus using the Bernstein formulation directly?
+
+13) Suppose we wish to interpolate between the following values using a Catmull-Rom spline.
+
+[source]
 ----
-$ java Month
-Enter an integer: **1**
-January
-
-$ java Month
-Enter an integer: **10**
-October
-----
-
-4) Consider the following loop
-
-[source,java]
-----
-int pinLength = 4;
-String pin = "";
-for (int i = 0; i < pinLength; i++) {
-  pin = pin + "*";
-  System.out.println(pin);
-}
-System.out.println("Enter your pin: "+pin);
-----
-
-* What is output to the console when we run this program?
-* Convert the loop above so it uses a while loop instead of a for loop
-
-5) Show the output from the following code fragment:
-
-[source,subs=quotes]
-----
-for (int x = 0; x < 6; x++) {
-  System.out.println(x + " " + x*x);
-}
-System.out.println("done!")
+p0 = (-1, -3)
+p1 = (2, 0)
+p2 = (10, 3)
+p3 = (0, 0)
 ----
 
-6) Consider the following program
+Recall that we use the following formulas to compute intermediary control points in each segment.
 
-[source,subs=quotes]
-----
-int x = 3;
-System.out.println("0  " + x);
-for (int i = 0; i < 5; i++) {
-    if (x % 2 == 0) {
-        x = x / 2;
-    }
-    else {
-        x = ( 3*x + 1 ) / 2;
-    }
-    System.out.println(i + " " + x);
-}
-----
+[stem]
+++++
+B0 = p_i \\
+B1 = p_i + \frac{1}{6}(p_{i+1} - p_{i-1}) \\
+B2 = p_{i+1} - \frac{1}{6}(p_{i+2} - p_{i}) \\
+B3 = p_{i+1}\\
+++++
 
-* Trace the program and show its output.
-* Create a table having columns for `i`, and `x` and show how the values change as the loop executes.
+* Draw the points.
+* How many segments does this spline have?
+* Consider the second segment. What are the formulas for B0, B1, B2, and B3?
+* Consider the second segment. Draw the vector stem:[p_{i+1} - p_{i-1}]
+* What is the slope at p2?
 
-7) Write a program that asks the user how many grades they want to
-average, prompts the user for those grades, and prints the average.
+14) How does a Catmull-Rom spline differ from a Hermite spline in terms of control points?
 
-[source, subs="quotes"]
-----
-Enter number of grades to average: *5*
+15) Suppose we have 3 keyframes. The first is at time = 1.0s. The second is at time = 5.0s. The last is at time = 6.0s. Suppose the application time is 4.0s. What segment of the spline would we interpolate and what would be the normalized time along that segment?
 
-Enter grade: *96*
-Enter grade: *86*
-Enter grade: *76*
-Enter grade: *66*
-Enter grade: *56*
+16) Suppose we wanted to use a spline to animate the position of a particle. What might the pseudocode look like?
 
-Average is: 76.0
-----
-
-8) Write a program that asks the user for a word, and then uses an accumulator
-to print out the word with all lowercase "e"s changed to uppercase "E"s.
-
-[source, subs="quotes"]
-----
-Enter a word: *repetitive*
-
-rEpEtitivE
-----
